--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
 }
 
 h1 {
+  padding-top: 0.5em;
   text-transform: uppercase;
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -30,6 +31,6 @@ h1 {
 </head>
 <body>
 <img src="img/BSides_Oslo_Splash.png">
-<h1>2024 edition is coming - stay tuned</h1>
+<h1>October 14th 2024 - Save the date</h1>
 </body>
 </html>
