--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@ body {
   width: 100vw;
   height: 100vh;
 }
+h1, h2 {
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 h1 {
   padding-top: 0.5em;
-  text-transform: uppercase;
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase; 
+}
+a {
+  color: #009;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
   </style>
@@ -32,5 +41,6 @@ h1 {
 <body>
 <img src="img/BSides_Oslo_Splash.png">
 <h1>October 14th 2024 - Save the date</h1>
+<h2>The CFP is open! <a title="CFP" href="https://docs.google.com/forms/d/1K3HxJKaBIha0v5pzoQf-yzhEifV4TLuSqBn1nmXAu_s/">Click here to submit</a></h2>
 </body>
 </html>
