--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@ a:hover {
 <body>
 <img src="img/BSides_Oslo_Splash.png">
 <h1>October 14th 2024 - Save the date</h1>
-<h2>The CFP is open! <a title="CFP" href="https://docs.google.com/forms/d/1K3HxJKaBIha0v5pzoQf-yzhEifV4TLuSqBn1nmXAu_s/">Click here to submit</a></h2>
+<h2>The CFP is open! <a title="CFP" href="https://docs.google.com/forms/d/1K3HxJKaBIha0v5pzoQf-yzhEifV4TLuSqBn1nmXAu_s/">Submit your talk today</a></h2>
 </body>
 </html>
