--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <h1>October 14th 2024 - Save the date</h1>
 <h2>The CFP is open! <a title="CFP" href="https://docs.google.com/forms/d/1K3HxJKaBIha0v5pzoQf-yzhEifV4TLuSqBn1nmXAu_s/">Submit your talk today</a></h2>
 {% include sponsors.html %}
+{% include footer.html %}
 </body>
 </html>
