--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <img src="assets/images/BSides_Oslo_Splash.png">
-<h1>October 14th 2024 - Save the date</h1>
+<h1>October 14th 2024 at Vulkan Arena - Save the date</h1>
 <h2>The CFP is open! <a title="CFP" href="https://docs.google.com/forms/d/1K3HxJKaBIha0v5pzoQf-yzhEifV4TLuSqBn1nmXAu_s/">Submit your talk today</a></h2>
 {% include sponsors.html %}
 {% include footer.html %}
