--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
 ---
+layout: default
 ---
-<!doctype html>
-<html>
-<head>
-  <title>BSides Oslo 2024</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assets/css/main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-<body>
-  <div class="front">
+
 <img src="assets/images/BSides_Oslo_Splash.png">
-<h1>October 14th 2024 at Vulkan Arena - Save the date</h1>
-<h2>The CFP is now closed. Thank you to everyone who answered!</h2>
+<h1>October 14th 2024 at Vulkan Arena</h1>
+{% include program.html %}
 {% include sponsors.html %}
-{% include footer.html %}
-</div>
-</body>
-</html>
+
+
