--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
+<section class="top">
 <img src="assets/images/BSides_Oslo_Splash.png">
 <h1>October 14th 2024 at Vulkan Arena</h1>
+</section>
 {% include program.html %}
 {% include sponsors.html %}
 
